adding directories for the two repos

--- a/.github/workflows/strapi-production.yml
+++ b/.github/workflows/strapi-production.yml
@@ -10,11 +10,14 @@ jobs:
     steps:
       - name: Checkout Current Repo
         uses: actions/checkout@v2
+        with:
+          path: ./builder
 
       - name: Checkout Strapi Repo
         uses: actions/checkout@v2
         with:
           repository: strapi/strapi
+          path: strapi
 
       - name: Check Directories
         run: |
