--- a/.github/workflows/strapi-production.yml
+++ b/.github/workflows/strapi-production.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout Current Repo
         uses: actions/checkout@v2
         with:
-          path: ./builder
+          path: ./strapi
 
       - name: Checkout Strapi Repo
         uses: actions/checkout@v2
