--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,11 +5,11 @@ ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 
 WORKDIR /opt/
-COPY package.json yarn.lock ./
+COPY strapi/package.json strapi/yarn.lock ./
 RUN yarn config set network-timeout 600000 -g && yarn install --production
 ENV PATH /opt/node_modules/.bin:$PATH
 WORKDIR /opt/app
-COPY . .
+COPY strapi .
 RUN yarn build
 
 # Creating final production image
