trying to get dockerfile to build

--- a/.github/workflows/strapi-production.yml
+++ b/.github/workflows/strapi-production.yml
@@ -44,5 +44,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          file: ${{ GITHUB_WORKSPACE }}/builder/Dockerfile.prod
+          file: Dockerfile.prod
+          working-directory: builder
           tags: tpeterson66/strapi:${{ github.run_id }}, tpeterson66/strapi:latest
