--- a/.github/workflows/strapi-production.yml
+++ b/.github/workflows/strapi-production.yml
@@ -27,6 +27,7 @@ jobs:
           ls $GITHUB_WORKSPACE
           ls $GITHUB_WORKSPACE/builder
           ls $GITHUB_WORKSPACE/strapi
+          cp $GITHUB_WORKSPACE/builder/Dockerfile.prod $GITHUB_WORKSPACE/strapi/Dockerfile
           
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -44,6 +45,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          file: Dockerfile.prod
-          working-directory: builder
+          # file: Dockerfile.prod
+          working-directory: strapi
           tags: tpeterson66/strapi:${{ github.run_id }}, tpeterson66/strapi:latest
