trying a copy of the file over vs. trying the build from another dir

--- a/.github/workflows/strapi-production.yml
+++ b/.github/workflows/strapi-production.yml
@@ -46,5 +46,5 @@ jobs:
         with:
           push: true
           # file: Dockerfile.prod
-          working-directory: strapi
+          working-directory: ${{ github.github_workspace }}/strapi
           tags: tpeterson66/strapi:${{ github.run_id }}, tpeterson66/strapi:latest
