trying a copy of the file over vs. trying the build from another dir

--- a/.github/workflows/strapi-production.yml
+++ b/.github/workflows/strapi-production.yml
@@ -42,5 +42,5 @@ jobs:
         with:
           push: true
           file: Dockerfile
-          working-directory: strapi
+          context: strapi
           tags: tpeterson66/strapi:${{ github.run_id }}, tpeterson66/strapi:latest
