trying a copy of the file over vs. trying the build from another dir

--- a/.github/workflows/strapi-production.yml
+++ b/.github/workflows/strapi-production.yml
@@ -41,6 +41,5 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          # file: Dockerfile
-          # context: strapi
+          working-directory: ./strapi
           tags: tpeterson66/strapi:${{ github.run_id }}, tpeterson66/strapi:latest
