trying a copy of the file over vs. trying the build from another dir

--- a/.github/workflows/strapi-production.yml
+++ b/.github/workflows/strapi-production.yml
@@ -41,5 +41,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          working-directory: ./strapi
+          context: strapi/
+          file: ./Dockerfile
           tags: tpeterson66/strapi:${{ github.run_id }}, tpeterson66/strapi:latest
