--- a/.github/workflows/strapi-production.yml
+++ b/.github/workflows/strapi-production.yml
@@ -40,7 +40,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          context: .
-          file: ./strapi/Dockerfile
-          working-directory: strapi
+          # context: .
+          # file: ./strapi/Dockerfile
+          # working-directory: strapi
           tags: tpeterson66/strapi:${{ github.run_id }}, tpeterson66/strapi:latest
